--- a/css/style.default.css
+++ b/css/style.default.css
@@ -6,18 +6,7 @@
 * ==========================================
 *
 */
-.text-01 {
-    margin-right: 8px;
-    margin-bottom: 25px;
-    margin-left: 8px;
-    white-space: normal;
-    line-height: 1.75em;
-}
-.span-01 {
-    color: rgb(89, 89, 89);
-    font-family: mp-quote, -apple-system-font, BlinkMacSystemFont, &quot;Helvetica Neue&quot;, &quot;PingFang SC&quot;, &quot;Hiragino Sans GB&quot;, &quot;Microsoft YaHei UI&quot;, &quot;Microsoft YaHei&quot;, Arial, sans-serif;
-    font-size: 20px;caret-color: rgb(50, 112, 234);
-}
+
 
 
 
@@ -1050,10 +1039,11 @@ h6,
 .h5,
 .h6 {
   margin-bottom: 0.5rem;
-  font-family: inherit;
   font-weight: 700;
   line-height: 1.2;
   color: inherit;
+    font-family: "微软雅黑";
+    font-style: normal;
 }
 
 h1,
@@ -1087,8 +1077,11 @@ h6,
 }
 
 .lead {
-  font-size: 1.25rem;
+  font-size: 1.5rem;
   font-weight: 300;
+    font-family: "微软雅黑";
+    text-align: justify;
+    
 }
 
 .display-1 {
