--- a/css/style.default.css
+++ b/css/style.default.css
@@ -1048,7 +1048,7 @@ h6,
 
 h1,
 .h1 {
-  font-size: 2.8rem;
+  font-size: 3.5rem;
 }
 
 h2,
@@ -1079,8 +1079,16 @@ h6,
 .lead {
   font-size: 1.5rem;
   font-weight: 300;
-    font-family: "微软雅黑";
+    font-family: "宋体";
     text-align: justify;
+    
+}
+.lead-01 {
+  font-size: 1.5rem;
+  font-weight: 300;
+    font-family: "宋体";
+    text-align: justify;
+    color:rgb(154, 154, 154);
     
 }
 
